fixed colors and margin on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --primary-yellow: #FFE800;
   --secondary-yellow: #ffe26e;
+  --primary-pink: #ff76ff;
+  --secondary-pink: #ffb3ff;
   --pie-hover: #7e6609;
   --main-bg: #fff;
   --main-text: #111;
@@ -508,11 +510,11 @@ main>footer {
   height: 250px;
   width: 250px;
   border-radius: 50%;
-  background-color: var(--primary-yellow);
+  background-color: var(--primary-white);
   background: repeating-conic-gradient(from 0deg,
-      var(--primary-yellow) 0deg 180deg,
-      var(--primary-blue) 180deg 324deg,
-      var(--secondary-blue) 324deg 360deg);
+      var(--primary-pink) 0deg 150deg,
+      var(--primary-blue) 150deg 300deg,
+      var(--secondary-blue) 300deg 360deg);
   position: relative;
   z-index: 0;
 }
@@ -550,7 +552,7 @@ main>footer {
 }
 
 .pie-details .slice1 {
-  background-color: var(--primary-yellow);
+  background-color: var(--primary-pink);
 }
 
 .pie-details .slice2 {
@@ -867,8 +869,8 @@ ul li a:hover {
     margin-top: 1rem;
   }
 
-  .token-card {
-    margin: 10px;
+  .token-card-last {
+    margin-top: 0rem;
   }
 
   .newsletter {
@@ -924,10 +926,15 @@ ul li a:hover {
 
   .token-card,
   .roadmap-left-card {
-    /* width: 300px; */
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .token-card-first { margin-left: 0px;}
+  .token-card-last { margin-right: 0px;}
+
+  .token-card-1-details .small {
+    font-size: 14px};
 
   .footer-logo {
     padding: 20px 0;
